--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - setup_remote_docker
       - run: |
           docker run --rm aquasec/kube-hunter:latest --remote $DEV_NODE_IP > scan.log
+          sync
       - store_artifacts:
           path: scan.log
       - run:
@@ -24,6 +25,7 @@ jobs:
       - setup_remote_docker
       - run: |
           docker run --rm aquasec/kube-hunter:latest --remote $PROD_NODE_IP > scan.log
+          sync
       - store_artifacts:
           path: scan.log
       - run:
